# FlyCropper

./: .gitignore  README.md  data_preparation.py  gpu_detector.py  inference.py  pyproject.toml  requirements.txt  train_classification.py  train_detection.py  workflow.ipynb
data/: README.md  crop_flies.py  result.json
